--- a/GuiApplication/GuiApplication.vcxproj.filters
+++ b/GuiApplication/GuiApplication.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="StudentMenu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FormHomePage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="GuiApplication.h">
@@ -47,12 +50,18 @@
     <QtMoc Include="StudentMenu.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="FormHomePage.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="GuiApplication.ui">
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="StudentMenu.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="FormHomePage.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
