--- a/GuiApplication/GuiApplication.vcxproj.filters
+++ b/GuiApplication/GuiApplication.vcxproj.filters
@@ -131,5 +131,8 @@
     <ClInclude Include="CourseDesign.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
