--- a/GuiApplication/GuiApplication.vcxproj.filters
+++ b/GuiApplication/GuiApplication.vcxproj.filters
@@ -129,4 +129,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="C:\Users\Double_zhuang\Desktop\qrc.rc" />
+  </ItemGroup>
 </Project>
